# dag-harness

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: DOCUMENTATION_SPRINT.md  V1_COMPLETION_PLAN.md  api-reference.md  architecture.md  claude-code-integration.md  configuration.md  getting-started.md  index.md  llms.md  llms.txt  quickstart.md  troubleshooting.md
docs/api/: python.md
docs/architecture/: LANGGRAPH-AUDIT.md
harness/: harness.yml  pyproject.toml
harness/dogfood/: harness-dogfood.yml  run-dogfood.sh
harness/dogfood/roles/ci-gitlab-config/meta/: main.yml
harness/dogfood/roles/ci-gitlab-config/scripts/: configure.sh
harness/dogfood/roles/ci-gitlab-verify/meta/: main.yml
harness/dogfood/roles/ci-gitlab-verify/scripts/: verify.sh
harness/dogfood/roles/gitlab-credentials/meta/: main.yml
harness/dogfood/roles/gitlab-credentials/scripts/: verify.sh
harness/dogfood/roles/repo-github-sync/meta/: main.yml
harness/dogfood/roles/repo-github-sync/scripts/: sync.sh
harness/dogfood/roles/repo-github-verify/meta/: main.yml
harness/dogfood/roles/repo-github-verify/scripts/: verify.sh
harness/dogfood/roles/repo-gitlab-create/meta/: main.yml
harness/dogfood/roles/repo-gitlab-create/scripts/: create.sh
harness/dogfood/roles/repo-gitlab-remote/meta/: main.yml
harness/dogfood/roles/repo-gitlab-remote/scripts/: configure.sh
harness/dogfood/roles/repo-push-gitlab/meta/: main.yml
harness/dogfood/roles/repo-push-gitlab/scripts/: push.sh
harness/harness/: __init__.py  cli.py  config.py
harness/harness/assets/claude/hooks/: audit-logger.py  universal-hook.py
harness/harness/assets/claude/skills/box-up-role/templates/: mr.md
harness/harness/bootstrap/: credentials.py  init.py  selftest.py  wizard.py
harness/harness/dag/: __init__.py  checkpointer.py  checkpointer_unified.py  commands.py  error_resolution.py  langgraph_builder.py  langgraph_engine.py  langgraph_nodes.py  langgraph_policies.py  langgraph_routing.py  langgraph_runner.py  langgraph_state.py  nodes.py  parallel.py  recovery_config.py  recovery_subgraph.py  store.py
harness/harness/db/: models.py  schema.sql
harness/harness/db/migrations/: 001_initial.py  002_token_usage.py  003_add_store.py  __init__.py
harness/harness/gitlab/: __init__.py  advanced.py  api.py  errors.py  graphql.py  http_client.py  idempotency.py  labels.py  merge_ordering.py  merge_train.py  retry.py  status.py  templates.py
harness/harness/hooks/: __init__.py  post_tool_use.py  pre_tool_use.py  tool_logger.py
harness/harness/hotl/: __init__.py  agent_session.py  claude_integration.py  orchestrator.py  queue.py  state.py  supervisor.py
harness/harness/mcp/: server.py
harness/harness/parsers/: __init__.py  ansible_parser.py
harness/harness/templates/: __init__.py  gitignore_additions.txt  harness.yml.j2
harness/harness/worktree/: manager.py
harness/scripts/: npm_integration.py  setup.sh
harness/tests/: conftest.py  strategies.py  test_ansible_parser.py  test_bootstrap_init.py  test_checkpointer_unified.py  test_config_validation.py  test_error_resolution.py  test_failure_injection.py  test_gitlab_api.py  test_gitlab_extended.py  test_gitlab_integration.py  test_hitl_interrupt.py  test_hooks.py  test_hotl_agent.py  test_hotl_orchestrator.py  test_hotl_queue.py  test_idempotency.py  test_interrupt_resume.py  test_langgraph_modernization.py  test_migrations.py  test_nodes.py  test_npm_integration.py  test_performance.py  test_recovery_subgraph.py  test_release.py  test_state_machine_pbt.py  test_state_pbt.py  test_store.py  test_subgraphs.py  test_templates.py  test_workflow_integration.py
harness/tests/e2e/: conftest.py  test_box_up_workflow.py  test_wave_execution.py  utils.py
harness/tests/fixtures/: __init__.py  checkpointer_fixtures.py  conftest.py  glab_fixtures.py  state_fixtures.py  worktree_fixtures.py
harness/tests/fixtures/sample_role/: Makefile
harness/tests/fixtures/sample_role/defaults/: main.yml
harness/tests/fixtures/sample_role/meta/: main.yml
harness/tests/fixtures/sample_role/tasks/: credentials.yml  main.yml
hooks/templates/: commit-msg  pre-commit
scripts/: bootstrap.sh  create-gitlab-issues.sh  create-gitlab-mr.sh  create-role-worktree.sh  install-hooks.sh
